2013-04-16  Jesse  <>

	* TestScreen.cs:
	* GREATClient.Linux.csproj:
	* GREATClient.Windows.csproj:
	* DrawableChampion.cs: 

2013-04-15  Jesse  <>

	* TestScreen.cs:
	* DrawableTileMap.cs:
	* GREATClient.Windows.csproj:
	* DrawableTileMap.cs: 

2013-04-15  Jesse  <>

	* Game1.cs:
	* TestScreen.cs:
	* IDraw.cs:
	* Screen.cs:
	* GREATClient.Windows.csproj: 

2013-04-15  Jesse  <>

	* Game1.cs:
	* TestScreen.cs:
	* Screen.cs:
	* DrImage.cs:
	* GREATClient.Linux.csproj:
	* DrRectangle.cs:
	* DrawableImage.cs:
	* DrawableRectangle.cs: 

2013-04-14  The Parasithe  <bipbip500@hotmail.com>

	* Game1.cs:
	* testo.png:
	* IDraw.cs:
	* TestScreen.cs:
	* Screen.cs:
	* DrImage.cs:
	* Drawable.cs:
	* Container.cs:
	* DrRectangle.cs:
	* GREATClient.Linux.csproj: 

2013-04-12  Jesse  <>

	* Game1.cs: 

2013-03-28  Jesse  <>

	* Game1.cs:
	* Client.cs:
	* ChampionResources.cs:
	* GREATClient.Linux.csproj: 

2013-03-20  Jesse  <${AuthorEmail}>

	* Game1.cs:
	* Client.cs: 

2013-03-19  Jesse  <${AuthorEmail}>

	* Game1.cs:
	* Client.cs:
	* run.png:
	* stand.png:
	* ChampionResources.cs:
	* Stickman_run.png:
	* GREATClient.Linux.csproj:
	* GREATClient.Windows.csproj:
	* Stickman_stand.png: 

2013-03-19  Jesse  <${AuthorEmail}>

	* Game1.cs:
	* Client.cs:
	* run.png:
	* GREATClient.Linux.csproj:
	* GREATClient.Windows.csproj: 

2013-03-18  Jesse  <${AuthorEmail}>

	* Game1.cs:
	* Client.cs: 

2013-03-18  Jesse  <${AuthorEmail}>

	* Game1.cs:
	* Client.cs: 

2013-03-18  Jesse  <${AuthorEmail}>

	* Game1.cs:
	* Client.cs:
	* Program.cs:
	* GameLibHelper.cs:
	* stand.png:
	* GREATClient.Linux.csproj:
	* GREATClient.Windows.csproj: 
