@@ -48,6 +48,8 @@
     <Compile Include="World\Tiles\TileCollision.cs" />
     <Compile Include="GameMatch.cs" />
     <Compile Include="World\GameWorld.cs" />
+    <Compile Include="Entities\Physics\CollisionHandler.cs" />
+    <Compile Include="Entities\EntityIDGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
